correct write bench